# benlellouch.github.io

./: .gitattributes  .gitignore  CNAME  Cargo.toml  Procfile  README.md  Rocket.toml  index.html
assets/js/: main.js
assets/static/: login.html
backend/: .env  CNAME  Cargo.toml  Rocket.toml
backend/migrations/2020-06-19-144119_create_users_sessions/: up.sql
backend/migrations/2021-08-26-182400_store_info/: down.sql  up.sql
backend/src/: admin.rs  cors.rs  database.rs  edit_component.rs  main.rs  models.rs  schema.rs
backend/templates/: admin.html.tera  experience_edit.html.tera  profile_edit.html.tera  project_edit.html.tera  skill_edit.html.tera
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.js  main.jsx
frontend/src/components/: Button.jsx  Card.jsx  DarkModeToggle.jsx  Experience.jsx  ExperienceForm.jsx  Experiences.jsx  Form.css  ItemList.jsx  LoginForm.jsx  ModalForm.css  ModalForm.jsx  Project.jsx  ProjectForm.jsx  Projects.jsx
frontend/src/hooks/: useDarkMode.js
frontend/src/utils/: api.js
migrations/2020-06-19-144119_create_users_sessions/: down.sql  up.sql
src/: add_component.rs  admin.rs  edit_component.rs  main.rs  models.rs  remove_component.rs  schema.rs  upload_content.rs
templates/: admin.html.tera  education_edit.html.tera  experience_edit.html.tera  index.html.tera  profile_edit.html.tera  project_edit.html.tera  skill_edit.html.tera
yew-frontend/: Cargo.toml
yew-frontend/src/: main.rs  model.rs
yew-frontend/src/components/: custom_button.rs  experiences.rs  login_form.rs  mod.rs  projects.rs
