[package]
name = "website"
version = "0.1.0"
authors = ["Benjamin Lellouch <blellouch@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
serde = "1.0.112"
serde_derive = "1.0.112"
serde_json = "1.0"
rocket-auth-login = { git = "https://github.com/vishusandy/rocket-auth-login.git", branch = "master"}
diesel = { version = "1.4.4", features = ["postgres"] }
dotenv = "0.15.0"
dotenv_codegen = "0.15.0"
lazy_static = "1.2"
bcrypt = "0.8"
rocket-multipart-form-data = "0.9.5"
image = "0.23.8"
rust-s3 = "0.24.0"


# jsonwebtoken = "6"
# bcrypt = "0.4.0"
# chrono = { version = "0.4.6", features = ["serde"] }
# csrf-token = { git = "https://git@github.com/werner/csrf-token.git", branch="v0.2.x" }

[dependencies.rocket_contrib]
version = "0.4.5"
default-features = false
features = ["tera_templates", "diesel_postgres_pool"]